[gd_scene load_steps=2 format=3 uid="uid://cehuipdasqya0"]

[ext_resource type="Script" path="res://Scripts/Components/interaction_area_component.gd" id="1_y6vr0"]

[node name="InteractionAreaComponent" type="Area2D"]
collision_layer = 0
script = ExtResource("1_y6vr0")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
